
syntax = "proto3";
// system_role_menu 系统角色和系统菜单关联表
package role;
option go_package = "./role";
import "google/protobuf/timestamp.proto";

// SystemRoleMenuObject 数据对象
message SystemRoleMenuObject {
	// @inject_tag: db:"id" json:"id"
	optional int64 id = 1; //自增编号
	// @inject_tag: db:"role_id" json:"roleId"
	optional int64 role_id = 2; //角色编号
	// @inject_tag: db:"menu_id" json:"menuId"
	optional int64 menu_id = 3; //菜单编号
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 4; //删除
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 5; //租户
	// @inject_tag: db:"creator" json:"creator"
	optional string creator = 6; //创建者
	// @inject_tag: db:"create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 7; //创建时间
	// @inject_tag: db:"updater" json:"updater"
	optional string updater = 8; //更新者
	// @inject_tag: db:"update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 9; //更新时间
}

// SystemRoleMenuCustomObject 数据对象
message SystemRoleMenuCustomObject {
	// @inject_tag: db:"role_id" json:"roleId"
	optional int64 role_id = 1; //角色编号
	// @inject_tag: db:"menu_ids" json:"menuIds"
	optional bytes menu_ids = 2; //菜单编号
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 3; //删除
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 4; //租户
	// @inject_tag: db:"creator" json:"creator"
	optional string creator = 5; //创建者
	// @inject_tag: db:"create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 6; //创建时间
	// @inject_tag: db:"updater" json:"updater"
	optional string updater = 7; //更新者
	// @inject_tag: db:"update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 8; //更新时间
}
// SystemRoleMenuCreateRequest 创建数据请求
message SystemRoleMenuCreateRequest {
	SystemRoleMenuCustomObject data = 1;
}
// SystemRoleMenuCreateResponse 创建数据响应
message SystemRoleMenuCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SystemRoleMenuListRequest 列表数据
message SystemRoleMenuListRequest {
	// @inject_tag: db:"role_id" json:"roleId"
	optional int64 role_id = 1; // 角色编号
	// @inject_tag: db:"menu_id" json:"menuId"
	optional int64 menu_id = 2; // 菜单编号
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 3; // 租户
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 4; // 删除

}

// SystemRoleMenuListResponse 数据响应
message SystemRoleMenuListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated SystemRoleMenuObject data = 3;
}


// SystemRoleMenuService 服务
service SystemRoleMenuService{
	rpc SystemRoleMenuCreate(SystemRoleMenuCreateRequest) returns (SystemRoleMenuCreateResponse);
	rpc SystemRoleMenuList(SystemRoleMenuListRequest) returns (SystemRoleMenuListResponse);
}
